vlib/v/checker/tests/fn_check_for_matching_optional_result_in_fields.out
vlib/v/checker/tests/fn_check_for_matching_optional_result_in_fields.vv:7:3: error: cannot assign to field `f`: expected `fn (voidptr)`, not `fn (voidptr) ?`
    5 | fn main() {
    6 |     a := Abc{
    7 |         f: fn (data voidptr) ? {}
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~
    8 |     }
    9 |     println(a)
